# indic-eval

./: .env.example  .gitignore  README.md  V21-README.md  pyproject.toml
spec/v2.1/: CHANGELOG-v2.0-to-v2.1.md  COST-MODEL-pilot.md  PILOT-Hindi-GST.md  README.md  Volume-1-Constitution.md  Volume-2-Research.md  Volume-3-Industry.md  Volume-4-Reliability-Safety-Quality.md  Volume-5-Architecture.md  Volume-6-Dataset-Bible.md  Volume-7-Scoring-Bible.md
src/indic_eval/: __init__.py  cli.py
src/indic_eval/benchmarks/: __init__.py  adapters.py  loader.py
src/indic_eval/benchmarks/data/: code-mix-hinglish-v1.json  dialect-bhojpuri-v1.json  diglossia-formal-v1.json  script-fidelity-v1.json  transliteration-v1.json
src/indic_eval/harness/: __init__.py  runner.py  scorers.py
src/indic_eval/leaderboard/: __init__.py  api.py  store.py
src/indic_eval/models/: __init__.py  scoring.py  types.py
src/indic_eval/observability/: __init__.py  detectors.py  sdk.py
src/indic_eval/v21/: __init__.py  adapters.py  cli.py  dataset.py  judge.py  metrics.py  normalization.py  pipeline.py  report.py  scoring.py  types.py
src/indic_eval/v21/data/: seed_v21.json  seed_v21_extra.json
tests/: test_benchmarks.py  test_harness.py  test_leaderboard.py  test_observability.py  test_scoring.py
tests/v21/: test_e2e.py  test_metrics.py  test_normalization.py  test_scoring.py
