[project]
name = "indic-eval"
version = "0.1.0"
description = "Eval harness, observability SDK, and public leaderboard for Indic LLMs (code-mix, transliteration, diglossia, dialect)."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "anthropic[bedrock]>=0.40",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.7",
    "click>=8.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
indic-eval = "indic_eval.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
